--- a/DVM.conf
+++ b/DVM.conf
@@ -144,11 +144,10 @@ filter {
 output {
   if "dvm" in [tags] {
     syslog  {
-       host => "192.168.10.6"
+       host => "DVM_IP"
        port => "516"
        protocol => "tcp"
        rfc => "rfc3164"
-       #codec => rubydebug { metadata => true }
     }
 
   }
