handling ip_src and dest as strings

--- a/DVM.conf
+++ b/DVM.conf
@@ -38,6 +38,8 @@ filter {
                 rename => { "[jsonMessage][filename]" => "[jsonMessage][file_name]" }
                 rename => { "[jsonMessage][md5]" => "[jsonMessage][file_md5]" }
                 rename => { "[jsonMessage][timedout]" => "[jsonMessage][timed_out]" }
+                convert => { "[jsonMessage][ip_src]" => "string" }
+                convert => { "[jsonMessage][ip_dest]" => "string" }
         }
     }
     if [jsonMessage][app_name] in ["zeek_conn", "zeek_dns", "zeek_ssl", "zeek_http"] {
