--- a/DVM.conf
+++ b/DVM.conf
@@ -30,7 +30,9 @@ filter {
     if [jsonMessage][app_name] == "zeek_files" {
         mutate {
                 add_field => { "[jsonMessage][message]" => "%{[jsonMessage][app_name]} from %{[jsonMessage][ip_src]} to %{[jsonMessage][ip_dest]}" }
-                rename => { "[jsonMessage][tx_hosts]" => "[jsonMessage][ip_src]" }
+                add_field => { "[jsonMessage][ip_src]" => "%{[jsonMessage][tx_hosts][0]}" }
+                add_field => { "[jsonMessage][ip_src]" => "%{[jsonMessage][rx_hosts][0]}" }
+                remove_filed { [ "[jsonMessage][tx_hosts]", "[jsonMessage][rx_hosts]" ] }
                 rename => { "[jsonMessage][rx_hosts]" => "[jsonMessage][ip_dest]" }
                 rename => { "[jsonMessage][conn_uids]" => "[jsonMessage][connection_uids]" }
                 rename => { "[jsonMessage][analyzers]" => "[jsonMessage][file_analyzers]" }
