--- a/DVM.conf
+++ b/DVM.conf
@@ -29,10 +29,11 @@ filter {
     }
     if [jsonMessage][app_name] == "zeek_files" {
         mutate {
+                replace => { "[jsonMessage][ip_src]" => "%{[jsonMessage][tx_hosts]}" }
+                replace => { "[jsonMessage][ip_dest]" => "%{[jsonMessage][rx_hosts]}" }
+        }
+        mutate {
                 add_field => { "[jsonMessage][message]" => "%{[jsonMessage][app_name]} from %{[jsonMessage][ip_src]} to %{[jsonMessage][ip_dest]}" }
-                add_field => { "[jsonMessage][ip_src]" => "%{[jsonMessage][tx_hosts][0]}" }
-                add_field => { "[jsonMessage][ip_src]" => "%{[jsonMessage][rx_hosts][0]}" }
-                remove_filed { [ "[jsonMessage][tx_hosts]", "[jsonMessage][rx_hosts]" ] }
                 rename => { "[jsonMessage][rx_hosts]" => "[jsonMessage][ip_dest]" }
                 rename => { "[jsonMessage][conn_uids]" => "[jsonMessage][connection_uids]" }
                 rename => { "[jsonMessage][analyzers]" => "[jsonMessage][file_analyzers]" }
@@ -78,7 +79,7 @@ filter {
     }
     if [jsonMessage][app_name] == "zeek_dns" {
         mutate {
-          add_field => { "[jsonMessage][message]" => "DNS query of \"%{[jsonMessage][query]}\" type %{[jsonMessage][qtype_name]} from %{[jsonMessage][ip_src]}" }
+          add_field => { "[jsonMessage][message]" => "DNS query of \"%{[jsonMessage][query]}\"" }
         }
         mutate {
           rename => { "[jsonMessage][qtype_name]" => "[jsonMessage][dns_qtype_name]" }
@@ -151,7 +152,7 @@ output {
        host => "DVM_IP"
        port => "516"
        protocol => "tcp"
-       rfc => "rfc3164"
+       rfc => "rfc5424"
     }
 
   }
