--- a/DVM.conf
+++ b/DVM.conf
@@ -61,7 +61,7 @@ filter {
         }
       } else {
         mutate {
-          add_field => { "[jsonMessage][message]" => "%{[jsonMessage][proto]} connection from %{[jsonMessage][ip_src]} to %{[jsonMessage][ip_dest]}:%{[jsonMessage][dest_port]}" }
+          add_field => { "[jsonMessage][message]" => "%{[jsonMessage][protocol]} connection from %{[jsonMessage][ip_src]} to %{[jsonMessage][ip_dest]}:%{[jsonMessage][dest_port]}" }
         }
       }
       mutate {
