removed extra field

--- a/DVM.conf
+++ b/DVM.conf
@@ -40,6 +40,7 @@ filter {
                 rename => { "[jsonMessage][filename]" => "[jsonMessage][file_name]" }
                 rename => { "[jsonMessage][md5]" => "[jsonMessage][file_md5]" }
                 rename => { "[jsonMessage][timedout]" => "[jsonMessage][timed_out]" }
+                remove_field => [ "[jsonMessage][rx_hosts]", "[jsonMessage][tx_hosts]" ]
         }
     }
     if [jsonMessage][app_name] in ["zeek_conn", "zeek_dns", "zeek_ssl", "zeek_http"] {
