fixed zeek_http message field

--- a/DVM.conf
+++ b/DVM.conf
@@ -116,8 +116,15 @@ filter {
       }
     }
     if [jsonMessage][app_name] == "zeek_http" {
-      mutate {
-        add_field => { "[jsonMessage][message]" => "HTTP %{[jsonMessage][method]} request to %{[jsonMessage][host]}%{[jsonMessage][uri]} from %{[jsonMessage][ip_src]}" }
+      if [jsonMessage][host] {
+        mutate {
+          add_field => { "[jsonMessage][message]" => "HTTP %{[jsonMessage][method]} request to %{[jsonMessage][host]}%{[jsonMessage][uri]} from %{[jsonMessage][ip_src]}" }
+        }
+      }
+      else {
+        mutate {
+          add_field => { "[jsonMessage][message]" => "HTTP %{[jsonMessage][method]} request to %{[jsonMessage][ip_dest]}%{[jsonMessage][uri]} from %{[jsonMessage][ip_src]}" }
+        }
       }
       mutate {
         rename => { "[jsonMessage][user_agent]" => "[jsonMessage][http_user_agent]" }
