--- a/DVM.conf
+++ b/DVM.conf
@@ -11,10 +11,32 @@ filter {
         source => "message"
         target => "jsonMessage"
       }
+      if [module] == "ossec" {
+        mutate {
+          add_field => {
+            "[jsonMessage][category]" => "%{module}"
+          }
+        }
+      }
+      else if [module] == "suricata" {
+        mutate {
+          rename => { "[jsonMessage][rule_type]" => "[jsonMessage][category]" }
+        }
+        mutate {
+          add_field => {
+            "[jsonMessage][category]" => "%{module}"
+          }
+        }
+      }
+      else {
+        mutate {
+          add_field => {
+            "[jsonMessage][category]" => "%{dataset}"
+          }
+        }
+      }
       mutate {
         add_field => {
-          "[jsonMessage][app_name]" => "%{module}_%{dataset}"
-          "[jsonMessage][category]" => "%{dataset}"
           "[jsonMessage][hostname]" => "%{[host][name]}"
         }
       }
@@ -27,13 +49,13 @@ filter {
     mutate {
       rename => { "[jsonMessage][ts]" => "[jsonMessage][timestamp]" }
     }
-    if [jsonMessage][app_name] == "zeek_files" {
+    if [jsonMessage][category] == "files" {
         mutate {
                 replace => { "[jsonMessage][ip_src]" => "%{[jsonMessage][tx_hosts]}" }
                 replace => { "[jsonMessage][ip_dest]" => "%{[jsonMessage][rx_hosts]}" }
         }
         mutate {
-                add_field => { "[jsonMessage][message]" => "%{[jsonMessage][app_name]} from %{[jsonMessage][ip_src]} to %{[jsonMessage][ip_dest]}" }
+                add_field => { "[jsonMessage][message]" => "%{[jsonMessage][category]} from %{[jsonMessage][ip_src]} to %{[jsonMessage][ip_dest]}" }
                 rename => { "[jsonMessage][conn_uids]" => "[jsonMessage][connection_uids]" }
                 rename => { "[jsonMessage][analyzers]" => "[jsonMessage][file_analyzers]" }
                 rename => { "[jsonMessage][mime_type]" => "[jsonMessage][file_mimetype]" }
@@ -43,7 +65,7 @@ filter {
                 remove_field => [ "[jsonMessage][rx_hosts]", "[jsonMessage][tx_hosts]" ]
         }
     }
-    if [jsonMessage][app_name] in ["zeek_conn", "zeek_dns", "zeek_ssl", "zeek_http"] {
+    if [jsonMessage][category] in ["conn", "dns", "ssl", "http"] {
       mutate {
         rename => { "[jsonMessage][id.orig_h]" => "[jsonMessage][ip_src]" }
         rename => { "[jsonMessage][id.orig_p]" => "[jsonMessage][src_port]" }
@@ -52,7 +74,7 @@ filter {
         rename => { "[jsonMessage][proto]" => "[jsonMessage][protocol]" }
       }
     }
-    if [jsonMessage][app_name] == "zeek_conn" {
+    if [jsonMessage][category] == "conn" {
       if [jsonMessage][service] {
         mutate {
           add_field => { "[jsonMessage][message]" => "%{[jsonMessage][service]} connection from %{[jsonMessage][ip_src]} to %{[jsonMessage][ip_dest]}:%{[jsonMessage][dest_port]}" }
@@ -75,7 +97,7 @@ filter {
         rename => { "[jsonMessage][resp_cc]" => "[jsonMessage][dest_country_code]" }
       }
     }
-    if [jsonMessage][app_name] == "zeek_dns" {
+    if [jsonMessage][category] == "dns" {
         mutate {
           add_field => { "[jsonMessage][message]" => "DNS query of \"%{[jsonMessage][query]}\"" }
         }
@@ -90,16 +112,16 @@ filter {
           rename => { "[jsonMessage][trans_id]" => "[jsonMessage][dns_transaction_id]" }
         }
     }
-    if [jsonMessage][app_name] == "zeek_ssl" {
+    if [jsonMessage][category] == "ssl" {
       mutate {
-        add_field => { "[jsonMessage][message]" => "%{[jsonMessage][app_name]} from %{[jsonMessage][ip_src]} to %{[jsonMessage][ip_dest]}" }
+        add_field => { "[jsonMessage][message]" => "%{[jsonMessage][category]} from %{[jsonMessage][ip_src]} to %{[jsonMessage][ip_dest]}" }
       }
       mutate {
         rename => { "[jsonMessage][cipher]" => "[jsonMessage][ssl_cipher]" }
         rename => { "[jsonMessage][established]" => "[jsonMessage][ssl_established]" }
       }
     }
-    if [jsonMessage][app_name] == "zeek_x509" {
+    if [jsonMessage][category] == "x509" {
       mutate {
         add_field => { "[jsonMessage][message]" => "SUBJECT: %{[jsonMessage][certificate.subject]} ISSUER: %{[jsonMessage][certificate.issuer]}" }
       }
@@ -115,7 +137,7 @@ filter {
         rename => { "[jsonMessage][certificate.serial]" => "[jsonMessage][certificate_serial]" }
       }
     }
-    if [jsonMessage][app_name] == "zeek_http" {
+    if [jsonMessage][category] == "http" {
       if [jsonMessage][host] {
         mutate {
           add_field => { "[jsonMessage][message]" => "HTTP %{[jsonMessage][method]} request to %{[jsonMessage][host]}%{[jsonMessage][uri]} from %{[jsonMessage][ip_src]}" }
