--- a/DVM.conf
+++ b/DVM.conf
@@ -20,7 +20,14 @@ filter {
       }
       else if [module] == "suricata" {
         mutate {
-          rename => { "[jsonMessage][rule_type]" => "[jsonMessage][category]" }
+          rename => { "[jsonMessage][alert][category]" => "[jsonMessage][rule_type]" }
+          rename => { "[jsonMessage][alert][rule]" => "[jsonMessage][rule]" }
+          rename => { "[jsonMessage][alert][signature]" => "[jsonMessage][signature]" }
+          rename => { "[jsonMessage][alert][severity]" => "[jsonMessage][severity]" }
+          rename => { "[jsonMessage][alert][action]" => "[jsonMessage][action]" }
+          rename => { "[jsonMessage][src_ip]" => "[jsonMessage][ip_src]" }
+          rename => { "[jsonMessage][dest_ip]" => "[jsonMessage][ip_dest]" }
+          rename => { "[jsonMessage][proto]" => "[jsonMessage][protocol]" }
         }
         mutate {
           add_field => {
