--- a/DVM.conf
+++ b/DVM.conf
@@ -65,7 +65,7 @@ filter {
                 add_field => { "[jsonMessage][message]" => "%{[jsonMessage][category]} from %{[jsonMessage][ip_src]} to %{[jsonMessage][ip_dest]}" }
                 rename => { "[jsonMessage][conn_uids]" => "[jsonMessage][connection_uids]" }
                 rename => { "[jsonMessage][analyzers]" => "[jsonMessage][file_analyzers]" }
-                rename => { "[jsonMessage][mime_type]" => "[jsonMessage][file_mimetype]" }
+                rename => { "[jsonMessage][mime_type]" => "[jsonMessage][file_mime_types]" }
                 rename => { "[jsonMessage][filename]" => "[jsonMessage][file_name]" }
                 rename => { "[jsonMessage][md5]" => "[jsonMessage][file_md5]" }
                 rename => { "[jsonMessage][timedout]" => "[jsonMessage][timed_out]" }
@@ -109,6 +109,8 @@ filter {
           add_field => { "[jsonMessage][message]" => "DNS query of \"%{[jsonMessage][query]}\"" }
         }
         mutate {
+          rename => { "[jsonMessage][qtype]" => "[jsonMessage][dns_qtype]" }
+          rename => { "[jsonMessage][qclass]" => "[jsonMessage][dns_qclass]" }
           rename => { "[jsonMessage][qtype_name]" => "[jsonMessage][dns_qtype_name]" }
           rename => { "[jsonMessage][qclass_name]" => "[jsonMessage][dns_qclass_name]" }
           rename => { "[jsonMessage][query]" => "[jsonMessage][dns_query]" }
@@ -119,16 +121,22 @@ filter {
           rename => { "[jsonMessage][trans_id]" => "[jsonMessage][dns_transaction_id]" }
         }
     }
-    if [jsonMessage][category] == "ssl" {
+    else if [jsonMessage][category] == "ssl" {
       mutate {
         add_field => { "[jsonMessage][message]" => "%{[jsonMessage][category]} from %{[jsonMessage][ip_src]} to %{[jsonMessage][ip_dest]}" }
       }
       mutate {
         rename => { "[jsonMessage][cipher]" => "[jsonMessage][ssl_cipher]" }
+        rename => { "[jsonMessage][curve]" => "[jsonMessage][ssl_curve]" }
+        rename => { "[jsonMessage][subject]" => "[jsonMessage][ssl_subject]" }
+        rename => { "[jsonMessage][version]" => "[jsonMessage][ssl_version]" }
+        rename => { "[jsonMessage][issuer]" => "[jsonMessage][ssl_issuer]" }
+        rename => { "[jsonMessage][validation_status]" => "[jsonMessage][ssl_validation_status]" }
         rename => { "[jsonMessage][established]" => "[jsonMessage][ssl_established]" }
+        rename => { "[jsonMessage][server_name]" => "[jsonMessage][ssl_server]" }
       }
     }
-    if [jsonMessage][category] == "x509" {
+    else if [jsonMessage][category] == "x509" {
       mutate {
         add_field => { "[jsonMessage][message]" => "SUBJECT: %{[jsonMessage][certificate.subject]} ISSUER: %{[jsonMessage][certificate.issuer]}" }
       }
@@ -142,9 +150,10 @@ filter {
         rename => { "[jsonMessage][certificate.not_valid_after]" => "[jsonMessage][certificate_not_valid_after]" }
         rename => { "[jsonMessage][certificate.not_valid_after]" => "[jsonMessage][certificate_not_valid_after]" }
         rename => { "[jsonMessage][certificate.serial]" => "[jsonMessage][certificate_serial]" }
+        rename => { "[jsonMessage][certificate.version]" => "[jsonMessage][certificate_version]" }
       }
     }
-    if [jsonMessage][category] == "http" {
+    else if [jsonMessage][category] == "http" {
       if [jsonMessage][host] {
         mutate {
           add_field => { "[jsonMessage][message]" => "HTTP %{[jsonMessage][method]} request to %{[jsonMessage][host]}%{[jsonMessage][uri]} from %{[jsonMessage][ip_src]}" }
@@ -167,6 +176,111 @@ filter {
         rename => { "[jsonMessage][host]" => "[jsonMessage][http_host]" }
         rename => { "[jsonMessage][tags]" => "[jsonMessage][http_tags]" }
         rename => { "[jsonMessage][trans_depth]" => "[jsonMessage][http_transaction_depth]" }
+      }
+    }
+    else if [jsonMessage][category] == "notice" {
+      mutate {
+        rename => { "[jsonMessage][msg]" => "[jsonMessage][message]" }
+        rename => { "[jsonMessage][id.orig_h]" => "[jsonMessage][ip_src]" }
+        rename => { "[jsonMessage][id.orig_p]" => "[jsonMessage][src_port]" }
+        rename => { "[jsonMessage][id.resp_h]" => "[jsonMessage][ip_dest]" }
+        rename => { "[jsonMessage][id.resp_p]" => "[jsonMessage][dest_port]" }
+        rename => { "[jsonMessage][proto]" => "[jsonMessage][protocol]" }
+      }
+    }
+    else if [jsonMessage][category] == "weird" {
+      mutate {
+        add_field => { "[jsonMessage][message]" => "%{[jsonMessage][cateogry]} - %{[jsonMessage][name]}" }
+      }
+      mutate {
+        rename => { "[jsonMessage][name]" => "[jsonMessage][event_name]" }
+        rename => { "[jsonMessage][certificate.issuer]" => "[jsonMessage][certificate_issuer]" }
+      }
+    }
+    else if [jsonMessage][category] == "dhcp" {
+      mutate {
+        add_field => { "[jsonMessage][message]" => "%{[jsonMessage][cateogry]} - %{[jsonMessage][msg_types]}" }
+      }
+      mutate {
+        rename => { "[jsonMessage][name]" => "[jsonMessage][event_name]" }
+        rename => { "[jsonMessage][lease_time]" => "[jsonMessage][dhcp_lease_time]" }
+        rename => { "[jsonMessage][assigned_addr]" => "[jsonMessage][dhcp_assigned_ip]" }
+        rename => { "[jsonMessage][client_addr]" => "[jsonMessage][client_ip]" }
+        rename => { "[jsonMessage][server_addr]" => "[jsonMessage][server]" }
+        rename => { "[jsonMessage][host_name]" => "[jsonMessage][client_hostname]" }
+      }
+    }
+    else if [jsonMessage][category] == "software" {
+      mutate {
+        add_field => { "[jsonMessage][message]" => "%{[jsonMessage][cateogry]} - %{[jsonMessage][unparsed_version]}" }
+      }
+      mutate {
+        rename => { "[jsonMessage][name]" => "[jsonMessage][software_name]" }
+        rename => { "[jsonMessage][unparsed_version]" => "[jsonMessage][version]" }
+        rename => { "[jsonMessage][host]" => "[jsonMessage][client_ip]" }
+      }
+    }
+    else if [jsonMessage][category] in [ "snmp", "dpd" ] {
+      mutate {
+        add_field => { "[jsonMessage][message]" => "%{[jsonMessage][cateogry]}" }
+      }
+      mutate {
+        rename => { "[jsonMessage][id.orig_h]" => "[jsonMessage][ip_src]" }
+        rename => { "[jsonMessage][id.orig_p]" => "[jsonMessage][src_port]" }
+        rename => { "[jsonMessage][id.resp_h]" => "[jsonMessage][ip_dest]" }
+        rename => { "[jsonMessage][id.resp_p]" => "[jsonMessage][dest_port]" }
+        rename => { "[jsonMessage][proto]" => "[jsonMessage][protocol]" }
+      }
+    }
+    else if [jsonMessage][category] == "tunnel" {
+      mutate {
+        add_field => { "[jsonMessage][message]" => "%{[jsonMessage][cateogry]} - %{[jsonMessage][action]}" }
+      }
+      mutate {
+        rename => { "[jsonMessage][id.orig_h]" => "[jsonMessage][ip_src]" }
+        rename => { "[jsonMessage][id.orig_p]" => "[jsonMessage][src_port]" }
+        rename => { "[jsonMessage][id.resp_h]" => "[jsonMessage][ip_dest]" }
+        rename => { "[jsonMessage][id.resp_p]" => "[jsonMessage][dest_port]" }
+      }
+    }
+    else if [jsonMessage][category] == "smtp" {
+      mutate {
+        add_field => { "[jsonMessage][message]" => "%{[jsonMessage][cateogry]}" }
+      }
+      mutate {
+        rename => { "[jsonMessage][id.orig_h]" => "[jsonMessage][ip_src]" }
+        rename => { "[jsonMessage][id.orig_p]" => "[jsonMessage][src_port]" }
+        rename => { "[jsonMessage][id.resp_h]" => "[jsonMessage][ip_dest]" }
+        rename => { "[jsonMessage][id.resp_p]" => "[jsonMessage][dest_port]" }
+        rename => { "[jsonMessage][last_reply]" => "[jsonMessage][smtp_last_reply]" }
+        rename => { "[jsonMessage][tls]" => "[jsonMessage][smtp_tls]" }
+      }
+    }
+    else if [jsonMessage][category] == "pe" {
+      mutate {
+        add_field => { "[jsonMessage][message]" => "%{[jsonMessage][cateogry]}" }
+      }
+      mutate {
+        rename => { "[jsonMessage][os]" => "[jsonMessage][os_type]" }
+      }
+    }
+    else if [jsonMessage][category] == "ssh" {
+      mutate {
+        add_field => { "[jsonMessage][message]" => "%{[jsonMessage][cateogry]}" }
+      }
+      mutate {
+        rename => { "[jsonMessage][server]" => "[jsonMessage][ssh_server]" }
+        rename => { "[jsonMessage][client]" => "[jsonMessage][ssh_client]" }
+        rename => { "[jsonMessage][version]" => "[jsonMessage][ssh_version]" }
+        rename => { "[jsonMessage][cipher_alg]" => "[jsonMessage][ssh_cipher_alg]" }
+        rename => { "[jsonMessage][auth_attempts]" => "[jsonMessage][ssh_attempts]" }
+        rename => { "[jsonMessage][host_key_alg]" => "[jsonMessage][ssh_host_key_alg]" }
+        rename => { "[jsonMessage][host_key]" => "[jsonMessage][ssh_host_key]" }
+        rename => { "[jsonMessage][compression_alg]" => "[jsonMessage][ssh_compression_alg]" }
+        rename => { "[jsonMessage][id.orig_h]" => "[jsonMessage][ip_src]" }
+        rename => { "[jsonMessage][id.orig_p]" => "[jsonMessage][src_port]" }
+        rename => { "[jsonMessage][id.resp_h]" => "[jsonMessage][ip_dest]" }
+        rename => { "[jsonMessage][id.resp_p]" => "[jsonMessage][dest_port]" }
       }
     }
   }
