--- a/DVM.conf
+++ b/DVM.conf
@@ -190,7 +190,7 @@ filter {
     }
     else if [jsonMessage][category] == "weird" {
       mutate {
-        add_field => { "[jsonMessage][message]" => "%{[jsonMessage][cateogry]} - %{[jsonMessage][name]}" }
+        add_field => { "[jsonMessage][message]" => "%{[jsonMessage][category]} - %{[jsonMessage][name]}" }
       }
       mutate {
         rename => { "[jsonMessage][name]" => "[jsonMessage][event_name]" }
@@ -199,7 +199,7 @@ filter {
     }
     else if [jsonMessage][category] == "dhcp" {
       mutate {
-        add_field => { "[jsonMessage][message]" => "%{[jsonMessage][cateogry]} - %{[jsonMessage][msg_types]}" }
+        add_field => { "[jsonMessage][message]" => "%{[jsonMessage][category]} - %{[jsonMessage][msg_types]}" }
       }
       mutate {
         rename => { "[jsonMessage][name]" => "[jsonMessage][event_name]" }
@@ -208,6 +208,7 @@ filter {
         rename => { "[jsonMessage][client_addr]" => "[jsonMessage][client_ip]" }
         rename => { "[jsonMessage][server_addr]" => "[jsonMessage][server]" }
         rename => { "[jsonMessage][host_name]" => "[jsonMessage][client_hostname]" }
+        rename => { "[jsonMessage][mac]" => "[jsonMessage][mac_address]" }
       }
     }
     else if [jsonMessage][category] == "software" {
@@ -281,6 +282,14 @@ filter {
         rename => { "[jsonMessage][id.orig_p]" => "[jsonMessage][src_port]" }
         rename => { "[jsonMessage][id.resp_h]" => "[jsonMessage][ip_dest]" }
         rename => { "[jsonMessage][id.resp_p]" => "[jsonMessage][dest_port]" }
+      }
+    }
+    else if [jsonMessage][category] == "file" {
+      mutate {
+        add_field => { "[jsonMessage][message]" => "%{[jsonMessage][request][client]}" }
+      }
+      mutate {
+        rename => { "[jsonMessage][os]" => "[jsonMessage][os_type]" }
       }
     }
   }
