--- a/DVM.conf
+++ b/DVM.conf
@@ -213,7 +213,7 @@ filter {
     }
     else if [jsonMessage][category] == "software" {
       mutate {
-        add_field => { "[jsonMessage][message]" => "%{[jsonMessage][cateogry]} - %{[jsonMessage][unparsed_version]}" }
+        add_field => { "[jsonMessage][message]" => "%{[jsonMessage][category]} - %{[jsonMessage][unparsed_version]}" }
       }
       mutate {
         rename => { "[jsonMessage][name]" => "[jsonMessage][software_name]" }
@@ -223,7 +223,7 @@ filter {
     }
     else if [jsonMessage][category] in [ "snmp", "dpd" ] {
       mutate {
-        add_field => { "[jsonMessage][message]" => "%{[jsonMessage][cateogry]}" }
+        add_field => { "[jsonMessage][message]" => "%{[jsonMessage][category]}" }
       }
       mutate {
         rename => { "[jsonMessage][id.orig_h]" => "[jsonMessage][ip_src]" }
@@ -235,7 +235,7 @@ filter {
     }
     else if [jsonMessage][category] == "tunnel" {
       mutate {
-        add_field => { "[jsonMessage][message]" => "%{[jsonMessage][cateogry]} - %{[jsonMessage][action]}" }
+        add_field => { "[jsonMessage][message]" => "%{[jsonMessage][category]} - %{[jsonMessage][action]}" }
       }
       mutate {
         rename => { "[jsonMessage][id.orig_h]" => "[jsonMessage][ip_src]" }
@@ -246,7 +246,7 @@ filter {
     }
     else if [jsonMessage][category] == "smtp" {
       mutate {
-        add_field => { "[jsonMessage][message]" => "%{[jsonMessage][cateogry]}" }
+        add_field => { "[jsonMessage][message]" => "%{[jsonMessage][category]}" }
       }
       mutate {
         rename => { "[jsonMessage][id.orig_h]" => "[jsonMessage][ip_src]" }
@@ -259,7 +259,7 @@ filter {
     }
     else if [jsonMessage][category] == "pe" {
       mutate {
-        add_field => { "[jsonMessage][message]" => "%{[jsonMessage][cateogry]}" }
+        add_field => { "[jsonMessage][message]" => "%{[jsonMessage][category]}" }
       }
       mutate {
         rename => { "[jsonMessage][os]" => "[jsonMessage][os_type]" }
@@ -267,7 +267,7 @@ filter {
     }
     else if [jsonMessage][category] == "ssh" {
       mutate {
-        add_field => { "[jsonMessage][message]" => "%{[jsonMessage][cateogry]}" }
+        add_field => { "[jsonMessage][message]" => "%{[jsonMessage][category]}" }
       }
       mutate {
         rename => { "[jsonMessage][server]" => "[jsonMessage][ssh_server]" }
