--- a/DVM.conf
+++ b/DVM.conf
@@ -28,6 +28,7 @@ filter {
           rename => { "[jsonMessage][src_ip]" => "[jsonMessage][ip_src]" }
           rename => { "[jsonMessage][dest_ip]" => "[jsonMessage][ip_dest]" }
           rename => { "[jsonMessage][proto]" => "[jsonMessage][protocol]" }
+          rename => { "[jsonMessage][sid]" => "[jsonMessage][security_id]" }
         }
         mutate {
           add_field => {
