fixed suricata timestamp

--- a/DVM.conf
+++ b/DVM.conf
@@ -29,8 +29,7 @@ filter {
           rename => { "[jsonMessage][dest_ip]" => "[jsonMessage][ip_dest]" }
           rename => { "[jsonMessage][proto]" => "[jsonMessage][protocol]" }
           rename => { "[jsonMessage][sid]" => "[jsonMessage][security_id]" }
-        }
-        mutate {
+          gsub => [ "[jsonMessage][timestamp]", "\.\d{6}\+0000$", "+0000" ]
           add_field => {
             "[jsonMessage][category]" => "%{module}"
           }
