--- a/DVM.conf
+++ b/DVM.conf
@@ -32,7 +32,7 @@ filter {
           gsub => [ "[jsonMessage][timestamp]", "\.\d{6}\+0000$", "+0000" ]
           add_field => {
             "[jsonMessage][category]" => "%{module}"
-            "[jsonMessage][message]" => "%{[jsonMessage][alert][rule]} - %{[jsonMessage][alert][action]}"
+            "[jsonMessage][message]" => "%{[jsonMessage][rule]} - %{[jsonMessage][action]}"
           }
         }
       }
