updated for new version of SO and to handle rsyslog

--- a/DVM.conf
+++ b/DVM.conf
@@ -15,6 +15,7 @@ filter {
         mutate {
           add_field => {
             "[jsonMessage][category]" => "%{module}"
+            "[jsonMessage][message]" => "%{[jsonMessage][location]}"
           }
         }
       }
@@ -37,9 +38,18 @@ filter {
         }
       }
       else {
-        mutate {
-          add_field => {
-            "[jsonMessage][category]" => "%{dataset}"
+	if "dataset" {
+      	  mutate {
+            add_field => {
+              "[jsonMessage][category]" => "%{dataset}"
+            }
+          }
+        }
+        else {
+      	  mutate {
+            add_field => {
+              "[jsonMessage][category]" => "none"
+            }
           }
         }
       }
@@ -54,8 +64,14 @@ filter {
 
 filter {
   if "dvm" in [tags] {
-    mutate {
-      rename => { "[jsonMessage][ts]" => "[jsonMessage][timestamp]" }
+    mutate { 
+        convert => { "[jsonMessage][ts]" => "integer" }
+    }
+    mutate { 
+        convert => { "[jsonMessage][ts]" => "string" }
+    }
+    mutate { 
+        rename => { "[jsonMessage][ts]" => "[jsonMessage][timestamp]" }
     }
     if [jsonMessage][category] == "files" {
         mutate {
